# CareerCoach

./: .gitignore  DESIGN.md  README.en.md  README.md  RULES.md  index.html  langgraph.json  main.py  pyproject.toml  report_source.md  report_source_template.md  功能逻辑详情.md  接口文档.md  数据库设计.md  智能软件开发综合实训-课程报告.docx  结项报告.docx  设计文档.md
.langgraph_api/: .langgraph_ops.pckl
ai/: __init__.py
ai/agents/: __init__.py  career_coach.py
ai/chains/: __init__.py  ability.py  dimension.py  quiz.py  quiz_report.py  resume.py  score.py  tier.py  utils.py
ai/config/: __init__.py  settings.py
ai/embeddings/: __init__.py  embeddings.py
ai/model/: __init__.py  deepseek.py
ai/prompts/: __init__.py  ability.py  chat.py  dimension.py  quiz.py  quiz_report.py  resume.py  score.py  tier.py
ai/tools/: __init__.py  jd_tools.py  resume_tools.py  search_tools.py
ai/vectorstore/: __init__.py  jd_store.py
ai/workflow/: __init__.py  pipeline.py  state.py
api/: __init__.py  auth.py  conversation.py  knowledge.py  quiz.py  resume.py
core/: __init__.py  config.py  database.py  security.py
frontend/: README.md  package-lock.json  package.json  vite.config.js
middleware/: __init__.py  auth.py
models/: __init__.py  conversation.py  jd.py  message.py  quiz.py  resume.py  user.py
resource/: init.sql  jd_data.json
schemas/: __init__.py  chat.py  conversation.py  jd.py  quiz.py  response.py  resume.py  user.py
services/: __init__.py  conversation.py  knowledge.py  message.py  quiz.py  resume.py  user.py
util/: oss_client.py
爬虫/: crawl.py  failed.json  jd_data.json
(+27 files in other folders)
